# hackerschool-solitair

./: .editorconfig  .gitattributes  .gitignore  KNOWN_ISSUES.md  LICENSE  README.md  SPIELREGELN.md  ascii.py  ascii_test.py  cards.py  cards_test.py  logging.json  pyproject.toml  solitair.py  solitair_test.py  spielfeld.txt  spielstand.py  spielstand_test.py
