[tool.poetry]
name = "solitair"
version = "0.1.0"
description = "A simple solitair program to teach python"
authors = ["Stefan Langer <mailtolanger@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
